header - position: fixed && add header wrapper && add script for stretch header

--- a/src/assets/scss/base/_animationJS.scss
+++ b/src/assets/scss/base/_animationJS.scss
@@ -17,7 +17,7 @@
 
 .rollOut {
   transform: translate(0);
-  transition: transform 0.4s ease-in, opacity 0.5s ease-in;
+  transition: transform 0.5s ease-in, opacity 0.6s ease-in;
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
