--- a/src/assets/scss/utils/_vars.scss
+++ b/src/assets/scss/utils/_vars.scss
@@ -25,7 +25,11 @@ $hoverLinkBGcolor: rgb(229, 229, 229);
 
 $linkHoverColor: rgb(108, 105, 225);
 
-//-----------------------------------------------------------end wtf
+//-----------------------------------------------------------end
+
+//header-size
+$height-stretch-header: px(90);
+$height-mobile-header: px(55);
 
 //common color
 $color-select-common: rgb(108, 105, 225);
